compiler/testData/diagnostics/tests/noValueForParameterOfLambda.diag.txt
/noValueForParameterOfLambda.kt:7:12: error: no value passed for parameter 'p2'
    lambda(1)
           ^^
/noValueForParameterOfLambda.kt:8:15: error: named arguments are not allowed for function types
    lambda(1, p2 = "")
              ^^
/noValueForParameterOfLambda.kt:12:12: error: no value passed for parameter 's'
    lambda(1)
           ^^
/noValueForParameterOfLambda.kt:13:15: error: named arguments are not allowed for function types
    lambda(1, s = "")
              ^
/noValueForParameterOfLambda.kt:17:12: error: no value passed for parameter 'x'
    lambda(1)
           ^^
/noValueForParameterOfLambda.kt:18:15: error: named arguments are not allowed for function types
    lambda(1, x = "")
              ^
/noValueForParameterOfLambda.kt:23:12: error: no value passed for parameter 'y'
    lambda(1)
           ^^
/noValueForParameterOfLambda.kt:24:15: error: named arguments are not allowed for function types
    lambda(1, y = "")
              ^

